--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="C:\Users\hp\Desktop\html\Portfolio Project\file.css" rel="stylesheet" type="text/css">
+    <link href="./file.css" rel="stylesheet" type="text/css">
     <title>My Resume</title>
 </head>
 <body>
     <section id="main">
         <nav>
             <a href="#" class="logo">
-                <img src="logo--.jpg" alt="Inpirational Quote">
+                <img src="./logo--.jpg" alt="Inpirational Quote">
             </a>
 
             <span class="menu-space"></span>
@@ -26,7 +26,7 @@
 
     <div class="content">
         <div class="image">
-            <img src="pic_.png" alt="Yashi Goyal">
+            <img src="./pic_.png" alt="Yashi Goyal">
         </div>
         <div class="main-text">
             <h1>Hello, I am Yashi Goyal</h1>
